Playing with the zebra...
* go to koha cvs home directory
* in misc/zebra there is a unimarc directory. I suggest that marc21 libraries create a marc21 directory
* put your zebra.cfg files here & create your database.
* from koha cvs home directory, ln -s misc/zebra/marc21 zebra (I mean create a symbolic link to YOUR zebra directory)
* now, everytime you add/modify a biblio/item your zebra DB is updated correctly.

NOTE :
* this uses a system call in perl. CPU consumming, but we are waiting for indexdata Perl/zoom
* deletion still not work
* UNIMARC zebra config files are provided in misc/zebra/unimarc directory. The most important line being :
in zebra.cfg :
recordId: (bib1,Local-number)
storeKeys:1

in .abs file :
elm 090            Local-number            -
elm 090/?          Local-number            -
elm 090/?/9        Local-number            !:w

(090$9 being the field mapped to biblio.biblionumber in Koha)

--- a/misc/zebra/unimarc/zebra.cfg
+++ b/misc/zebra/unimarc/zebra.cfg
@@ -3,11 +3,14 @@
 # $Id$
 #
 # Where are the config files located?
-profilePath: ${srcdir:-.}:${srcdir:-.}/../tab
+profilePath: ${srcdir:-.}:/usr/local/share/idzebra/tab/
+#:${srcdir:-.}/../tab
 
 # Files that describe the attribute sets supported.
 attset: bib1.att
 attset: explain.att
+
+recordId: (bib1,Local-number) 
 
 # Specify record type
 recordType: grs.marc.unimarc
@@ -23,3 +26,7 @@ keyTmpDir: tmp
 
 # Approx. Memory usage during indexing
 memMax: 4
+
+storeKeys:1
+storeData:1
+
