Fixed wrong path for tab file.

--- a/misc/zebra/usmarc/zebra.cfg
+++ b/misc/zebra/usmarc/zebra.cfg
@@ -3,7 +3,7 @@
 # Joshua Ferraro < jmf at liblime dot com >
 #
 # Where are the config files located?
-profilePath: ${srcdir:-.}:${srcdir:-.}/../../tab
+profilePath: ${srcdir:-.}:/usr/local/share/idzebra/tab/
 recordId: (bib1,Local-number)
 storeKeys:1
 
