Fixing zebra.cfg for usmarc

--- a/misc/zebra/usmarc/zebra.cfg
+++ b/misc/zebra/usmarc/zebra.cfg
@@ -3,16 +3,15 @@
 # Joshua Ferraro < jmf at liblime dot com >
 #
 # Where are the config files located?
-profilePath: ${srcdir:-.}:/usr/local/share/idzebra/tab/
-recordId: (bib1,Local-number)
-storeKeys:1
+profilePath: ${srcdir:-.}:/usr/share/idzebra/tab/
+recordId: (bib1,Identifier-standard)
 
 # Files that describe the attribute sets supported.
 attset: bib1.att
 attset: explain.att
 
 # Specify record type
-recordType: grs.marc.usmarc
+recordType: grs.xml
 
 # Lock File Area
 lockDir: lock
@@ -26,7 +25,13 @@ keyTmpDir: tmp
 # Approx. Memory usage during indexing
 memMax: 400
 
-database: NPLKoha
+database: kohatest
 
 systag rank rank
 systag sysno sysno
+
+perm.anonymous: rw
+encoding utf-8
+
+storeKeys:1
+storeData:1
