get_record works now

--- a/misc/zebra/unimarc/pqf.properties
+++ b/misc/zebra/unimarc/pqf.properties
@@ -27,6 +27,7 @@ index.cql.serverChoice			= 1=1016
 
 index.rec.id				= 1=12
 
+index.dc.identifier                     = 1=1007
 index.dc.title				= 1=4
 index.dc.subject			= 1=21
 index.dc.creator			= 1=1003
