Enable shadow registers in zebra.cfg

--- a/misc/zebra/usmarc/zebra.cfg
+++ b/misc/zebra/usmarc/zebra.cfg
@@ -6,6 +6,9 @@
 profilePath: ${srcdir:-.}:/usr/share/idzebra/tab/
 recordId: (bib1,Identifier-standard)
 
+# Enable shadow registers
+shadow shadow:4g
+
 # Files that describe the attribute sets supported.
 attset: bib1.att
 attset: explain.att
