--- a/misc/zebra/usmarc/pqf.properties
+++ b/misc/zebra/usmarc/pqf.properties
@@ -34,6 +34,7 @@ index.dc.creator			= 1=1003
 index.dc.author				= 1=1003
 index.dc.itemtype                       = 1=1031
 index.dc.barcode                        = 1=1032
+index.dc.isbn                           = 1=7
 	### Unofficial synonym for "creator"
 index.dc.editor				= 1=1020
 index.dc.publisher			= 1=1018
