adding some comments as well as support for iso2709 files

--- a/misc/zebra/usmarc/zebra.cfg
+++ b/misc/zebra/usmarc/zebra.cfg
@@ -4,17 +4,47 @@
 #
 # Where are the config files located?
 profilePath: ${srcdir:-.}:/usr/share/idzebra/tab/
+
+# name of the database
+database: kohatest
+
+# set our encoding to utf-8
+encoding: UTF-8
+
+# we're using ranking
+systag rank rank
+systag sysno sysno
+
+# permissions (add passwords eventually)
+perm.anonymous: rw
+
+# specifies how the records are to be identified when updating
 recordId: (bib1,Identifier-standard)
 
+# key info is stored so we can update/delete records (File Record IDs)
+storeKeys:1
+
+# records are stored internally
+storeData:1
+
 # Enable shadow registers
+#register: register:500M
 shadow shadow:4g
+# Approx. Memory usage during indexing
+memMax: 400
 
 # Files that describe the attribute sets supported.
 attset: bib1.att
 attset: explain.att
+attset: gils.att
 
 # Specify record type
+# the syntax is:  group.recordType[.name]:type
+# so in this case, iso2709 is the group name
+iso2709.recordType:grs.marcxml.record
 recordType: grs.xml
+#iso2079.recordType:grs.marcxml.collection
+#recordTyle: grs.xml.collection
 
 # Lock File Area
 lockDir: lock
@@ -24,17 +54,3 @@ setTmpDir: tmp
 
 # Temp File area for index program
 keyTmpDir: tmp
-
-# Approx. Memory usage during indexing
-memMax: 400
-
-database: kohatest
-
-systag rank rank
-systag sysno sysno
-
-perm.anonymous: rw
-encoding utf-8
-
-storeKeys:1
-storeData:1
