Adding ability to do fuzzy searches

--- a/misc/zebra/usmarc/pqf.properties
+++ b/misc/zebra/usmarc/pqf.properties
@@ -34,7 +34,9 @@ index.dc.creator			= 1=1003
 index.dc.author				= 1=1003
 index.dc.itemtype                       = 1=1031
 index.dc.barcode                        = 1=1032
+index.dc.branch                         = 1=1033
 index.dc.isbn                           = 1=7
+
 	### Unofficial synonym for "creator"
 index.dc.editor				= 1=1020
 index.dc.publisher			= 1=1018
@@ -80,7 +82,7 @@ relation.scr				= 2=3
 # Relation modifiers.
 #
 relationModifier.relevant		= 2=102
-relationModifier.fuzzy			= 2=100
+relationModifier.fuzzy                  = 5=103
 	### 100 is "phonetic", which is not quite the same thing
 relationModifier.stem			= 2=101
 relationModifier.phonetic		= 2=100
