Adding any attribute, so we can do any all "search terms"

--- a/misc/zebra/usmarc/pqf.properties
+++ b/misc/zebra/usmarc/pqf.properties
@@ -36,6 +36,7 @@ index.dc.itemtype                       = 1=1031
 index.dc.barcode                        = 1=1032
 index.dc.branch                         = 1=1033
 index.dc.isbn                           = 1=7
+index.dc.any				= 1=1016
 
 	### Unofficial synonym for "creator"
 index.dc.editor				= 1=1020
