--- a/misc/zebra/usmarc/zebra.cfg
+++ b/misc/zebra/usmarc/zebra.cfg
@@ -2,11 +2,32 @@
 # a database with USMARC records for Koha
 # Joshua Ferraro < jmf at liblime dot com >
 #
+
+## EDIT TO MATCH YOUR LOCAL CONFIG
+# name of the database (should match koha.conf's zebradb entry)
+database: kohaplugin
+
+# Specifies the location of the various register files that Zebra               # uses to represent your databases. See:                                        #  http://indexdata.dk/zebra/doc/register-location.tkl
+
+register: /home/kohaplugin/register:4g
+
+# Enables the  safe update   facility of Zebra, and tells the system            # where to place the required, temporary files.
+shadow /home/kohaplugin/shadow:4g
+
+# Lock File Area
+lockDir: /home/kohaplugin/lock
+
+# Temp File area for result sets
+setTmpDir: /home/kohaplugin/tmp
+
+# Temp File area for index program
+keyTmpDir: /home/kohaplugin/tmp
+
+# Approx. Memory usage during indexing
+memMax: 400
+
 # Where are the config files located?
 profilePath: ${srcdir:-.}:/usr/share/idzebra/tab/
-
-# name of the database
-database: kohatest
 
 # set our encoding to utf-8
 encoding: UTF-8
@@ -27,9 +48,6 @@ storeKeys:1
 # records are stored internally
 storeData:1
 
-# Enable shadow registers
-#register: register:500M
-shadow shadow:4g
 # Approx. Memory usage during indexing
 memMax: 400
 
@@ -45,12 +63,3 @@ iso2709.recordType:grs.marcxml.record
 recordType: grs.xml
 #iso2079.recordType:grs.marcxml.collection
 #recordTyle: grs.xml.collection
-
-# Lock File Area
-lockDir: lock
-
-# Temp File area for result sets
-setTmpDir: tmp
-
-# Temp File area for index program
-keyTmpDir: tmp
