--- a/misc/zebra/usmarc/zebra.cfg
+++ b/misc/zebra/usmarc/zebra.cfg
@@ -1,65 +1,41 @@
 # Simple Zebra configuration file that defines
-# a database with USMARC records for Koha
-# Joshua Ferraro < jmf at liblime dot com >
+# a database with MARCXML records.
+# $Id$
 #
-
-## EDIT TO MATCH YOUR LOCAL CONFIG
-# name of the database (should match koha.conf's zebradb entry)
-database: kohaplugin
-
-# Specifies the location of the various register files that Zebra               # uses to represent your databases. See:                                        #  http://indexdata.dk/zebra/doc/register-location.tkl
-
-register: /home/kohaplugin/register:4g
-
-# Enables the  safe update   facility of Zebra, and tells the system            # where to place the required, temporary files.
-shadow /home/kohaplugin/shadow:4g
-
-# Lock File Area
-lockDir: /home/kohaplugin/lock
-
-# Temp File area for result sets
-setTmpDir: /home/kohaplugin/tmp
-
-# Temp File area for index program
-keyTmpDir: /home/kohaplugin/tmp
-
-# Approx. Memory usage during indexing
-memMax: 400
-
 # Where are the config files located?
-profilePath: ${srcdir:-.}:/usr/share/idzebra/tab/
-
-# set our encoding to utf-8
+profilePath: ${srcdir:-.}:${srcdir:-.}/tab
 encoding: UTF-8
-
-# we're using ranking
-systag rank rank
-systag sysno sysno
-
-# permissions (add passwords eventually)
-perm.anonymous: rw
-
-# specifies how the records are to be identified when updating
-recordId: (bib1,Identifier-standard)
-
-# key info is stored so we can update/delete records (File Record IDs)
-storeKeys:1
-
-# records are stored internally
-storeData:1
-
-# Approx. Memory usage during indexing
-memMax: 400
-
 # Files that describe the attribute sets supported.
 attset: bib1.att
 attset: explain.att
-attset: gils.att
-
+attset:gils.att
+###Zebra path to index folder
+modulePath: /zebra/index/.libs
 # Specify record type
-# the syntax is:  group.recordType[.name]:type
-# so in this case, iso2709 is the group name
-iso2709.recordType:grs.marcxml.record
-recordType: grs.xml
-#iso2079.recordType:grs.marcxml.collection
-#recordTyle: grs.xml.collection
+
+recordtype: alvis.filter_alvis_conf.xml
+
+#database:kohalis
+storeKeys:1
+storeData:1
+
+
+
+# Lock File Area
+lockDir: lock
+perm.anonymous:r
+perm.author:rw
+passw.c:kohalis
+#shadow
+#register: /register:500M
+#shadow: /zebrashadow:1G 
+
+# Temp File area for result sets
+setTmpDir:tmp
+
+# Temp File area for index program
+keyTmpDir:tmp
+
+# Approx. Memory usage during indexing
+memMax: 200M
+rank:rank-1
