updated french translation + improved & fixed default zebra config files

--- a/misc/zebra/ccl.properties
+++ b/misc/zebra/ccl.properties
@@ -57,7 +57,7 @@ ab Abstract
 #            of records selected is the union of the sets of records
 #            selected by each of the (appropriate) Use attributes that
 #            the target supports.
-Any 1=1016
+Any 4=6 1=1016
 kw Any
 
 #Anywhere             1035  The record is selected if the
