cleaning duplicate entries in top menus & fixing a bug in "branch" index (zebra) & updated french translation

--- a/misc/zebra/ccl.properties
+++ b/misc/zebra/ccl.properties
@@ -184,7 +184,7 @@ au Author
 #                           number from a system not
 #                           specified elsewhere in this
 #                           list of attributes.
-Local-classification 1=20
+Local-classification 4=1 1=20
 lcn Local-classification
 callnum Local-classification
 #Local-classification cc callnum dewey
