--- a/misc/zebra/ccl.properties
+++ b/misc/zebra/ccl.properties
@@ -793,8 +793,9 @@ ut Title-uniform
 #                           for an authority to be searched subfield $9 in the
 #                           for cataloging purposes.        following: 700,701,702,710,
 #                                                           711,712 and some 6XX fields (Unimarc)
-Authority-number           1=Koha-Auth-Number
-an Authority-number
+Authority-number           1=8910
+an Authority-Number
+Koha-Auth-Number Authority-Number
 
 #Authority/format-id        authtypecode  The Code 
 #                           associated to an authority type
