Adding onloan field facility for zebra and unimarc biblios following the 995 recommandation

--- a/misc/zebra/ccl.properties
+++ b/misc/zebra/ccl.properties
@@ -962,6 +962,7 @@ l-format 1=8703
 # BRANCH (of local library)
 branch 1=1033
 
+Illustration-code 1=Illustration-code 
 # Item Type
 
 # Year limit
