--- a/etc/koha-httpd.conf
+++ b/etc/koha-httpd.conf
@@ -3,8 +3,8 @@
 #NameVirtualHost *
 
 ## OPAC
-<VirtualHost __WEBSERVER_IP__:80>
-   ServerAdmin webmaster@__WEBSERVER_DOMAIN__
+<VirtualHost __WEBSERVER_IP__:__WEBSERVER_PORT__>
+   ServerAdmin  __WEBMASTER_EMAIL__
    DocumentRoot __BASE_DIR__/opac/htdocs
    ServerName __WEBSERVER_HOST__
 #  ServerAlias opac.mydomain.com
@@ -33,10 +33,10 @@
 </VirtualHost>
 
 ## Intranet
-<VirtualHost __WEBSERVER_IP__:8080>
-   ServerAdmin webmaster@__WEBSERVER_DOMAIN__
+<VirtualHost __WEBSERVER_IP__:__WEBSERVER_PORT_LIBRARIAN__>
+   ServerAdmin __WEBMASTER_EMAIL__
    DocumentRoot __BASE_DIR__/intranet/htdocs
-   ServerName __WEBSERVER_HOST__:8080
+   ServerName __WEBSERVER_HOST__:__WEBSERVER_PORT_LIBRARIAN__
 #  ServerAlias intranet.mydomain.com
    ScriptAlias /cgi-bin/koha/ "__BASE_DIR__/intranet/cgi-bin/"
    ScriptAlias /index.html "__BASE_DIR__/intranet/cgi-bin/mainpage.pl"
