Move many files to more FHS-like paths
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/etc/koha-httpd.conf
+++ b/etc/koha-httpd.conf
@@ -5,24 +5,23 @@
 ## OPAC
 <VirtualHost __WEBSERVER_IP__:__WEBSERVER_PORT__>
    ServerAdmin  __WEBMASTER_EMAIL__
-   DocumentRoot __BASE_DIR__/opac/htdocs
+   DocumentRoot __BASE_DIR__/templates/koha-tmpl/
    ServerName __WEBSERVER_HOST__
 #  ServerAlias opac.mydomain.com
-   ScriptAlias /cgi-bin/koha/ "__BASE_DIR__/opac/cgi-bin/"
-   ScriptAlias /index.html "__BASE_DIR__/opac/cgi-bin/opac-main.pl"
-   ScriptAlias /opac-search.pl "__BASE_DIR__/opac/cgi-bin/search"
-   ScriptAlias /search "__BASE_DIR__/opac/cgi-bin/search"
-   ErrorLog __BASE_DIR__/log/opac-error_log
-#  TransferLog __BASE_DIR__/log/opac-access_log
-   SetEnv PERL5LIB "__BASE_DIR__/intranet/modules"
-   SetEnv KOHA_CONF "__BASE_DIR__/etc/koha-conf.xml"
+   ScriptAlias /cgi-bin/koha/ "__CGI_DIR__/opac/"
+   ScriptAlias /index.html "__CGI_DIR__/opac/opac-main.pl"
+   ScriptAlias /opac-search.pl "__CGI_DIR__/opac/search"
+   ScriptAlias /search "__CGI_DIR__/opac/search"
+   ErrorLog __LOG_DIR__/koha-opac-error_log
+#  TransferLog __LOG_DIR__/koha-opac-access_log
+   SetEnv KOHA_CONF "__PREFIX__/share/koha/etc/koha-conf.xml"
    Options +FollowSymLinks
 
 #  Rewrite Rules
    RewriteEngine On
 
 #  Uncomment to turn on rewrite logging
-#  RewriteLog __BASE_DIR__/log/opac-rewrite.log
+#  RewriteLog __LOG_DIR__/koha-opac-rewrite.log
 #  RewriteLogLevel 1
    RewriteCond %{QUERY_STRING} (.*?)(?:[A-Za-z0-9_-]+)=&(.*)
    RewriteRule (.+) $1?%1%2 [N,R,NE]
@@ -35,20 +34,19 @@
 ## Intranet
 <VirtualHost __WEBSERVER_IP__:__WEBSERVER_PORT_LIBRARIAN__>
    ServerAdmin __WEBMASTER_EMAIL__
-   DocumentRoot __BASE_DIR__/intranet/htdocs
+   DocumentRoot __BASE_DIR__/templates/koha-tmpl/
    ServerName __WEBSERVER_HOST__:__WEBSERVER_PORT_LIBRARIAN__
 #  ServerAlias intranet.mydomain.com
-   ScriptAlias /cgi-bin/koha/ "__BASE_DIR__/intranet/cgi-bin/"
-   ScriptAlias /index.html "__BASE_DIR__/intranet/cgi-bin/mainpage.pl"
-   ScriptAlias /search "__BASE_DIR__/intranet/cgi-bin/search.pl"
-   ErrorLog __BASE_DIR__/log/error_log
-#  TransferLog __BASE_DIR__/log/access_log
-   SetEnv PERL5LIB "__BASE_DIR__/intranet/modules"
-   SetEnv KOHA_CONF "__BASE_DIR__/etc/koha-conf.xml"
+   ScriptAlias /cgi-bin/koha/ "__CGI_DIR__/"
+   ScriptAlias /index.html "__CGI_DIR__/mainpage.pl"
+   ScriptAlias /search "__CGI_DIR__/search.pl"
+   ErrorLog __LOG_DIR__/koha-error_log
+#  TransferLog __LOG_DIR__/koha-access_log
+   SetEnv KOHA_CONF "__PREFIX__/share/koha/etc/koha-conf.xml"
    Options +FollowSymLinks
    RewriteEngine On    
 #  Uncomment to turn on rewrite logging
-#  RewriteLog __BASE_DIR__/log/intranet-rewrite.log
+#  RewriteLog __LOG_DIR__/koha-intranet-rewrite.log
 #  RewriteLogLevel 1
 
    RewriteCond %{QUERY_STRING} (.*?)(?:[A-Za-z0-9_-]+)=&(.*)
