changing the name of the zebra password file to passwd
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/etc/zebradb/zebra-authorities.cfg
+++ b/etc/zebradb/zebra-authorities.cfg
@@ -29,7 +29,7 @@ storeData:1
 lockDir: __BASE_DIR__/zebradb/authorities/lock
 perm.anonymous:r
 perm.kohaadmin:rw
-passw.kohalis
+passw.passwd
 shadow
 register: __BASE_DIR__/zebradb/authorities/register:4G
 shadow: __BASE_DIR__/zebradb/authorities/shadow:1G 
