--- a/etc/zebradb/zebra-biblios.cfg
+++ b/etc/zebradb/zebra-biblios.cfg
@@ -26,7 +26,7 @@ storeData:1
 lockDir: __BASE_DIR__/zebradb/biblios/lock
 perm.anonymous:r
 perm.kohaadmin:rw
-passw.kohalis
+passw.passwd
 shadow
 register: __BASE_DIR__/zebradb/biblios/register:4G
 shadow: __BASE_DIR__/zebradb/biblios/shadow:4G
